--- a/JavaScript/Secção 8/JavaScript/funcoes_strings.html
+++ b/JavaScript/Secção 8/JavaScript/funcoes_strings.html
@@ -5,6 +5,13 @@
 		<meta charset="utf-8">
 
 		<script>
+
+			// propriedade length retorna a quantidade de caracteres
+
+			var nome = ' Jorge Sant Ana '
+
+			document.write('-' + nome.trim() + '-') ;
+
 			
 		</script>
 
